fixed a lot of background etc

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <h1>Goal 6</h1>
                 <p class="history__heading">Ensure availability and sustainable management of water and
                     sanitation for all</p>
-                <img class="history__icon" src="assets/elements/waterdrop.svg" alt="waterdrop">
+                <img class="history__drop" src="assets/elements/waterdrop.svg" alt="waterdrop">
             </div>
             <div class="history__part history__part--intro">
                 <h2 class="history__title">The Clock Is Ticking...</h2>
@@ -26,7 +26,7 @@
                     is growing. The world pledged to ensure clean water and sanitation for all by 2030, but as of 2022, not a single <a href="https://sdgs.un.org/goals/goal6#targets_and_indicators">target</a> is on track.</p>
             </div>
             <div class="history__part">
-                <p class="history__text history__text--characterIntro">This is the story about <span class="line-break history__importantText hidden-font" data-hidden="hidden">Maya</span></p>
+                <p class="history__text">This is the story about <span class="line-break history__importantText hidden-font" data-hidden="hidden">Maya</span></p>
                 <img class="history__character-img" src="assets/elements/maya.svg" alt="A sad little girl">
             </div>
             <div class="history__part">
@@ -38,61 +38,61 @@
                 <div class="horizontal__background horizontal__background--1"></div> 
                 <img class="horizontal__character" src="assets/elements/maya-walking.svg">
 
-                <div class="history__part history__part--1 history__part--unset">
+                <div class="history__part history__part--no-justify">
                     <p class="history__text history__text--top history__text--written-firstline" data-hidden="hidden">She walks nearly 3 kilometers down a dusty path in her rural village.</p>
                     <p class="history__text history__text--written-secondline" data-hidden="hidden">The river she collects from isn't clean, but it's the only option.</p>
                 </div>
             </div>
-            <div class="history__part history__part--2 history__part--unset">
+            <div class="history__part history__sunrise history__part--no-justify">
                 <p class="history__text history__text--top history__text--written-firstline" data-hidden="hidden">Boiling the water helps a little—when there's enough fuel,</p>
                 <p class="history__text history__text--written-secondline" data-hidden="hidden">but some days the water makes her sick, and she can't go to school..</p>
+                <img class="history__landscape" src="assets/elements/boiling-water.svg">
             </div>
-            <div class="history__part history__part--3 history__part--unset">
+            <div class="history__part history__part--crowd history__part--no-justify">
                 <p class="history__text  history__text--top">Maya is one of <span class="line-break history__importantText hidden-font" data-hidden="hidden">2.2 billion people worldwide</span> without access to safe drinking water.</p>
+                <img class="history__landscape" src="assets/elements/crowd.svg">
             </div>
-            <div class="horizontal">
+            <div class="horizontal history__sunrise">
                 <div class="horizontal__background horizontal__background--2"></div> 
-
-                    <div class="history__part history__part--drought-gradient history__part--unset">
-                        <p class="history__text history__text--top history__text--written-firstline" data-hidden="hidden">Her family lives in a region hit by frequent droughts.</p> 
-                        <p class="history__text history__text--written-secondline" data-hidden="hidden">Part of the 1.4 billion affected by droughts between 2002 and 2021.</p>
-                    </div>
-                    <div class="history__part history__part--drought-gradient history__part--unset">
+                    <div class="history__part history__part--no-justify">
                         <p class="history__text history__text--top history__text--written-firstline" data-hidden="hidden">Her family lives in a region hit by frequent droughts.</p> 
                         <p class="history__text history__text--written-secondline" data-hidden="hidden">Part of the 1.4 billion affected by droughts between 2002 and 2021.</p>
                     </div>
                 </div>
             </div>
-            <div class="history__part history__part--unset">
-                <p class="history__text history__text--top history__text--shorter">On the news, Maya sees images of places with shiny taps, but even those places are changing.</p>
-                <img class="history__character-img" src="assets/elements/tv.svg" alt="TV showing the other side of the world">
-                <img class="history__character-img" src="assets/elements/maya.svg" alt="Maya">
+            <div class="history__part history__part--news history__part--no-justify">
+                <p class="history__text history__text--top history__text--short">On the news, Maya sees images of places with shiny taps, but even those places are changing.</p>
+                <img class="history__landscape" src="assets/elements/news.svg">
             </div>
-            <div class="history__part history__part--unset">
-                <p class="history__text history__text--top history__text--shorter">In 2022, half the world faced severe water scarcity.</p>
+            <div class="history__part history__part--earth history__part--no-justify">
+                <p class="history__text history__text--top history__text--short">In 2022, half the world faced severe water scarcity.</p>
                 <div class="history__earth-container">
                     <img class="history__earth-img" data-hidden="hidden" src="assets/elements/earth.svg" alt="The earth going from green to brown">
                 </div>
             </div>
-            <div class="history__part history__part--4 history__part--unset">
+            <div class="history__part history__part--fourPeople history__part--no-justify">
                 <p class="history__text history__text--top">One in four people lived with extremely high water stress.</p>
+                <img class="history__landscape" src="assets/elements/four-people.svg">
             </div>
-            <div class="history__part history__part--5">
-                <p class="history__text history__text--left">Maya's river flows through two countries.</p>
-                <p class="history__text history__text--right">But neither government talks to the other about how to protect it.</p>
+            <div class="history__part history__part--countries history__part--no-justify">
+                <p class="history__text history__text--top history__text--shorter">Maya's river flows through two countries. But neither government talks to the other about how to protect it.</p>
+                <img class="history__landscape" src="assets/elements/countries.svg">
             </div>
-            <div class="history__part history__part--6">
+            <div class="history__part history__part--river">
                 <p class="history__text">Less than <span class="line-break history__importantText hidden-font" data-hidden="hidden">20% of countries</span> with shared waters have strong cooperation.</p>
+                <svg class="history__river"xmlns="http://www.w3.org/2000/svg" viewBox="0 0 2000 1050"><path d="M1513.29-84.08c80.56 62.64 113.22 161.73 83.98 243.57-18.58 52-62.68 98.52-118.64 115.81-96.65 29.86-191.31-39.04-251.06-73.06C975.22 58.53 561.83 90.47 412.19 274.87c-94.58 116.55-112.64 329.55-19.81 455.56 192.7 261.57 888.18 182.25 1168.61-36.31 28.61-22.3 98.37-81.48 204.67-99.03 136.63-22.56 259.92 35.77 340.02 85.83"/></svg>
             </div>
-            <div class="history__part history__part--hope-gradient history__part--unset history__part--7">
+            <div class="history__part history__part--no-justify history__part--progress">
                 <h2 class="history__text--top">There is progress:</h2>
                 <p class="history__text">Aid for water projects rose 10% in 2022, after five years of decline. Wastewater treatment is improving, and some regions are managing water more efficiently.</p>
                 <img class="history__plant-img" data-hidden="hidden" src="assets/elements/plant.svg" alt="Plant growing">
+                <img class="history__landscape" src="assets/elements/progress.svg">
             </div>
-            <div class="history__part history__part--red-gradient history__part--8 history__part--unset">
+            <div class="history__part history__part--ending history__part--no-justify">
                 <p class="history__text history__text--top history__text--growing hidden-font" data-hidden="hidden">But Maya doesn't feel that progress yet.</p>
+                <img class="history__landscape" src="assets/elements/ending.svg">
             </div>
-            <div class="message">
+            <div class="message history__part">
                 <h2>We Can't Afford to Wait</h2>
                 <p class="message__text">The message is clear: To reach the world's promise of clean water and safe
                     sanitation by 2030, we must move 3 to 6 times faster.
