--- a/index.html
+++ b/index.html
@@ -94,9 +94,9 @@
                 <h2>We Can't Afford to Wait</h2>
                 <p class="message__text">The message is clear: To reach the world's promise of clean water and safe
                     sanitation by 2030, we must move 3 to 6 times faster.
-                    Because while statistics matter, it's children like Maya who remind us: every number is a life.</p>
+                    Because while statistics matter, it's children like Maya who remind us: Every number is a life.</p>
                 <p class="message__slogan">Water is life. Let's act like it.</p>
-
+                <p class="message__text">Do you want to help?</p>
                 <div class="message__buttons">
                     <a class="message__btn" href="https://sdgs.un.org/goals/goal6">Read more</a>
                     <a class="message__btn" href="https://donate.jointsdgfund.org/">Donate</a>
