--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
             <div class="history__part history__part--intro">
                 <h2 class="history__title">The Clock Is Ticking...</h2>
                 <p class="history__text history__text--growing hidden-font" data-hidden="hidden">Half the world experiences severe water scarcity every year, and the number
-                    is growing. The world pledged to ensure clean water and sanitation for all by 2030, but as of 2022, not a single <a class="target" href="https://sdgs.un.org/goals/goal6#targets_and_indicators">target</a> is on track.</p>
+                    is growing. The world pledged to ensure clean water and sanitation for all by 2030, but as of 2022, not a single <a class="target" href="https://sdgs.un.org/goals/goal6#targets_and_indicators" target="_blank">target</a> is on track.</p>
             </div>
             <div class="history__part">
                 <p class="history__text">This is the story about <span class="line-break history__importantText hidden-font" data-hidden="hidden">Maya</span></p>
-                <img class="history__character-img" src="assets/elements/maya.svg" alt="A sad little girl">
+                <img class="history__character-img" src="assets/elements/maya.svg" alt="Maya, a sad little girl">
             </div>
             <div class="history__part history__wrapper">
                 <p class="history__text history__text--written-firstline" data-hidden="hidden">Every morning, 12-year-old Maya wakes before the sun.</p> 
@@ -34,7 +34,7 @@
            
             <div class="horizontal history__sunrise history__wrapper">
                 <div class="horizontal__background horizontal__background--1"></div> 
-                <img class="horizontal__character" src="assets/elements/maya-walking.svg">
+                <img class="horizontal__character" src="assets/elements/maya-walking.svg" alt="Maya walking">
 
                 <div class="history__part history__part--no-justify history__wrapper">
                     <p class="history__text history__text--top history__text--written-firstline" data-hidden="hidden">She walks nearly 3 kilometers down a dusty path in her rural village.</p>
@@ -44,11 +44,11 @@
             <div class="history__part history__sunrise history__part--no-justify history__wrapper">
                 <p class="history__text history__text--top history__text--written-firstline" data-hidden="hidden">Boiling the water helps a little—when there's enough fuel,</p>
                 <p class="history__text history__text--written-secondline" data-hidden="hidden">but some days the water makes her sick, and she can't go to school..</p>
-                <img class="history__landscape history__landscape--boiling" src="assets/elements/boiling-water.svg">
+                <img class="history__landscape history__landscape--boiling" src="assets/elements/boiling-water.svg" alt="Maya boiling water outside her house">
             </div>
             <div class="history__part history__part--crowd history__part--no-justify">
                 <p class="history__text history__text--top">Maya is one of <span class="line-break history__importantText hidden-font" data-hidden="hidden">2.2 billion people worldwide</span> without access to safe drinking water.</p>
-                <img class="history__landscape history__landscape--crowd" src="assets/elements/crowd.svg">
+                <img class="history__landscape history__landscape--crowd" src="assets/elements/crowd.svg" alt="Maya standing with a crowd of people">
             </div>
             <div class="horizontal history__sunrise">
                 <div class="horizontal__background horizontal__background--2"></div> 
@@ -60,7 +60,7 @@
             </div>
             <div class="history__part history__part--news history__part--no-justify">
                 <p class="history__text history__text--top history__text--short">On the news, Maya sees images of places with shiny taps, but even those places are changing.</p>
-                <img class="history__landscape history__landscape--news" src="assets/elements/news.svg">
+                <img class="history__landscape history__landscape--news" src="assets/elements/news.svg" alt="Maya looking at a TV with privileged people">
             </div>
             <div class="history__part history__part--earth history__part--no-justify">
                 <p class="history__text history__text--top history__text--short">In 2022, half the world faced severe water scarcity.</p>
@@ -70,11 +70,11 @@
             </div>
             <div class="history__part history__part--fourPeople history__part--no-justify">
                 <p class="history__text history__text--top">One in four people lived with extremely high water stress.</p>
-                <img class="history__landscape history__landscape--statistic" src="assets/elements/statistic.svg">
+                <img class="history__landscape history__landscape--statistic" src="assets/elements/statistic.svg" alt="Maya standing with three other people">
             </div>
             <div class="history__part history__part--countries history__part--no-justify">
                 <p class="history__text history__text--top history__text--shorter">Maya's river flows through two countries. But neither government talks to the other about how to protect it.</p>
-                <img class="history__landscape history__landscape--countries" src="assets/elements/countries.svg">
+                <img class="history__landscape history__landscape--countries" src="assets/elements/countries.svg" alt="A river flowing through two countries">
             </div>
             <div class="history__part history__part--river">
                 <p class="history__text">Less than <span class="line-break history__importantText hidden-font" data-hidden="hidden">20% of countries</span> with shared waters have strong cooperation.</p>
@@ -84,11 +84,11 @@
                 <h2 class="history__text--top">There is progress:</h2>
                 <p class="history__text">Aid for water projects rose 10% in 2022, after five years of decline. Wastewater treatment is improving, and some regions are managing water more efficiently.</p>
                 <img class="history__plant-img" data-hidden="hidden" src="assets/elements/plant.svg" alt="Plant growing">
-                <img class="history__landscape history__landscape--progress" src="assets/elements/progress.svg">
+                <img class="history__landscape history__landscape--progress" src="assets/elements/progress.svg" alt="A green landscape">
             </div>
             <div class="history__part history__part--ending history__part--no-justify">
                 <p class="history__text history__text--top history__text--growing hidden-font" data-hidden="hidden">But Maya doesn't feel that progress yet.</p>
-                <img class="history__landscape history__landscape--ending" src="assets/elements/ending.svg">
+                <img class="history__landscape history__landscape--ending" src="assets/elements/ending.svg" alt="Maya standing in the village with people">
             </div>
             <div class="message history__part">
                 <h2>We Can't Afford to Wait</h2>
@@ -98,8 +98,8 @@
                 <p class="message__slogan">Water is life. Let's act like it.</p>
                 <p class="message__text">Do you want to help?</p>
                 <div class="message__buttons">
-                    <a class="message__btn" href="https://sdgs.un.org/goals/goal6">Read more</a>
-                    <a class="message__btn" href="https://donate.jointsdgfund.org/">Donate</a>
+                    <a class="message__btn" href="https://sdgs.un.org/goals/goal6" target="_blank">Read more</a>
+                    <a class="message__btn" href="https://donate.jointsdgfund.org/" target="_blank">Donate</a>
                 </div>
                 
                 <button class="message__btn-top">&#8593;</button>
