--- a/index.html
+++ b/index.html
@@ -44,11 +44,11 @@
             <div class="history__part history__sunrise history__part--no-justify history__wrapper">
                 <p class="history__text history__text--top history__text--written-firstline" data-hidden="hidden">Boiling the water helps a little—when there's enough fuel,</p>
                 <p class="history__text history__text--written-secondline" data-hidden="hidden">but some days the water makes her sick, and she can't go to school..</p>
-                <img class="history__landscape history__landscape--boiling" src="assets/elements/boiling-water.svg" alt="Maya boiling water outside her house">
+                <img class="history__landscape history__landscape" src="assets/elements/boiling-water.svg" alt="Maya boiling water outside her house">
             </div>
             <div class="history__part history__part--crowd history__part--no-justify">
                 <p class="history__text history__text--top">Maya is one of <span class="line-break history__importantText hidden-font" data-hidden="hidden">2.2 billion people worldwide</span> without access to safe drinking water.</p>
-                <img class="history__landscape history__landscape--crowd" src="assets/elements/crowd.svg" alt="Maya standing with a crowd of people">
+                <img class="history__landscape history__landscape" src="assets/elements/crowd.svg" alt="Maya standing with a crowd of people">
             </div>
             <div class="horizontal history__sunrise">
                 <div class="horizontal__background horizontal__background--2"></div> 
@@ -78,7 +78,7 @@
             </div>
             <div class="history__part history__part--river">
                 <p class="history__text">Less than <span class="line-break history__importantText hidden-font" data-hidden="hidden">20% of countries</span> with shared waters have strong cooperation.</p>
-                <svg class="history__river"xmlns="http://www.w3.org/2000/svg" viewBox="0 0 2000 1050" preserveAspectRatio="xMidYMid meet"><path d="M1513.29-84.08c80.56 62.64 113.22 161.73 83.98 243.57-18.58 52-62.68 98.52-118.64 115.81-96.65 29.86-191.31-39.04-251.06-73.06C975.22 58.53 561.83 90.47 412.19 274.87c-94.58 116.55-112.64 329.55-19.81 455.56 192.7 261.57 888.18 182.25 1168.61-36.31 28.61-22.3 98.37-81.48 204.67-99.03 136.63-22.56 259.92 35.77 340.02 85.83"/></svg>
+                <svg class="history__river" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 2018 1050" preserveAspectRatio="xMidYMid meet"><path d="M1513.29-84.08c80.56 62.64 113.22 161.73 83.98 243.57-18.58 52-62.68 98.52-118.64 115.81-96.65 29.86-191.31-39.04-251.06-73.06C975.22 58.53 561.83 90.47 412.19 274.87c-94.58 116.55-112.64 329.55-19.81 455.56 192.7 261.57 888.18 182.25 1168.61-36.31 28.61-22.3 98.37-81.48 204.67-99.03 136.63-22.56 259.92 35.77 340.02 85.83"/></svg>
             </div>
             <div class="history__part history__part--no-justify history__part--progress">
                 <h2 class="history__text--top">There is progress:</h2>
@@ -88,7 +88,7 @@
             </div>
             <div class="history__part history__part--ending history__part--no-justify">
                 <p class="history__text history__text--top history__text--growing hidden-font" data-hidden="hidden">But Maya doesn't feel that progress yet.</p>
-                <img class="history__landscape history__landscape--ending" src="assets/elements/ending.svg" alt="Maya standing in the village with people">
+                <img class="history__landscape history__landscape" src="assets/elements/ending.svg" alt="Maya standing in the village with people">
             </div>
             <div class="message history__part">
                 <h2>We Can't Afford to Wait</h2>
